--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
+    "react-emotion": "9.0.0",
     "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.4.8",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
@@ -112,9 +114,8 @@
     ]
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"],
+    "plugins": ["emotion"]
   },
   "devDependencies": {
     "node-sass": "^4.10.0",
