--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.1",
     "react-emotion": "9.0.0",
+    "react-google-tag-manager": "^2.2.1",
+    "react-gtm-module": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
     "react-spinners": "^0.4.8",
@@ -123,6 +125,7 @@
     ]
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
     "node-sass": "^4.10.0",
     "recharts": "^1.3.6"
   }
